尝试虚拟代理

--- a/DesignPatterns/设计模式.md
+++ b/DesignPatterns/设计模式.md
@@ -16,27 +16,27 @@
 
 
 
-## 单一职责原则 Single Responsibility Principle
+## 1. 单一职责原则 Single Responsibility Principle
 
 - 一个方法只做一件事情，如请求数据的函数不要去渲染数据
 
 
 
-## 开闭原则 OCP
+## 2. 开闭原则 OCP
 
 - 一个软件实体如类、模块和函数应该对扩展开放，对修改关闭
 - 面向扩展开放，面向修改关闭jQuery extend， 同时增强代码复用性。
 
 
 
-## 里氏代换原则 L Subsituation Principle
+## 3. 里氏代换原则 L Subsituation Principle
 
 - 任何基类可以出现的地方，子类一定可以出现。通俗的来讲就是：子类可以扩展父类的功能，但不能改变父类原有的功能。
 - 一个父类可以访问的接口，父类忙着其他事情，子类可以去访问。
 
 
 
-## 接口分离原则 ISP
+## 4. 接口分离原则 ISP
 
 Interface Segregation Principle
 
@@ -44,7 +44,7 @@ Interface Segregation Principle
 
 
 
-## 迪米特原则（最小知道原则） LD
+## 5. 迪米特原则（最小知道原则） LD
 
 Law of Demeter
 
@@ -52,7 +52,7 @@ Law of Demeter
 
 
 
-## 依赖倒置原则 DIP
+## 6. 依赖倒置原则 DIP
 
 Dependence Inversion Principle
 
@@ -65,4 +65,14 @@ Dependence Inversion Principle
 ## 单例模式
 
 - 保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+- 在它的核心结构中只包含一个被称为单例的特殊类。通过单例模式可以保证系统中，应用该模式的类一个类只有一个实例。即一个类只有一个对象实例。
 
+
+
+## 代理模式
+
+- 为一个对象提供一种代理以控制对这个对象的访问
+- 虚拟代理：把一些开销大的对象，延迟到真正需要它的时候才去创建执行。
+- 安全代理：控制真实对象的访问权限。
+- 远程代理：一个对象将不同空间的对象进行局部代理
+- 智能代理：调用对象代理处理另外一些事情，如垃圾回收机制增加额外的服务。
