代理模式 + 策略模式

--- a/DesignPatterns/设计模式.md
+++ b/DesignPatterns/设计模式.md
@@ -76,3 +76,14 @@ Dependence Inversion Principle
 - 安全代理：控制真实对象的访问权限。
 - 远程代理：一个对象将不同空间的对象进行局部代理
 - 智能代理：调用对象代理处理另外一些事情，如垃圾回收机制增加额外的服务。
+
+
+
+## 策略模式
+
+策略模式是指对一系列的算法定义，并将每一个算法封装起来，而且使它们还可以相互替换。策略模式让算法独立于使用它的客户而独立变化。
+
+- 策略模式支持在运行时选择算法，把他们一个个封装起来，并且使他们可以相互替换。
+- 决定用一个类对象实例来管理规则的校验。
+- 该对象要能，相应的主动添加对规则的相应处理方法。
+- 校验数据的时候可以相应的返回相关信息。
